added countdown and accompaning sound

--- a/index.html
+++ b/index.html
@@ -24,11 +24,34 @@
       <br />
       <br />
       <div id="shape-container">
+        <div id="three">3</div>
+        <div id="two">2</div>
+        <div id="one">1</div>
+        <div id="start-sign">Start!</div>
         <div id="shape"></div>
       </div>
-      <button id="start-button">Start</button>
+
+      <span id="start-btn-text">Press button to start.</span>
+      <img
+        src="./assets/red-button-edit.png"
+        alt="red-button"
+        id="red-button"
+      />
+
       <audio id="whoosh">
         <source src="/assets/video-game-beep.mp3" type="audio/mpeg" />
+      </audio>
+      <audio id="oneSound">
+        <source src="/assets/oneSound.mp4" type="audio/mpeg" />
+      </audio>
+      <audio id="twoSound">
+        <source src="/assets/twoSound.mp4" type="audio/mpeg" />
+      </audio>
+      <audio id="threeSound">
+        <source src="/assets/threeSound.mp4" type="audio/mpeg" />
+      </audio>
+      <audio id="raceSound">
+        <source src="/assets/mario-kart-race-sound.mp4" type="audio/mpeg" />
       </audio>
       <script type="text/javascript" src="index.js"></script>
     </div>
