added theme music and pause and play function

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
       </h1>
 
       <h2>Click on the boxes and circles as quickly as possible.</h2>
+      <p>
+        <strong id="average-tag">Average:</strong
+        ><span id="avg-secs">0.00s</span>
+      </p>
       <span id="time">0.00s</span>
-      <p><strong id="time-tag">Best time</strong></p>
+      <p><strong id="time-tag">Best time:</strong></p>
 
       <br />
       <br />
@@ -37,6 +41,7 @@
         alt="red-button"
         id="red-button"
       />
+      <button id="music-player">Music</button>
 
       <audio id="whoosh">
         <source src="/assets/video-game-beep.mp3" type="audio/mpeg" />
@@ -52,6 +57,12 @@
       </audio>
       <audio id="raceSound">
         <source src="/assets/mario-kart-race-sound.mp4" type="audio/mpeg" />
+      </audio>
+      <audio id="theme-music">
+        <source
+          src="/assets/Jeremy_Blake_-_Powerup_NO_COPYRIGHT_8-bit_Music.mp3"
+          type="audio/mpeg"
+        />
       </audio>
       <script type="text/javascript" src="index.js"></script>
     </div>
