updated avg-time algo. fixed music on and off btn

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
       </div>
 
       <span id="start-btn-text">Press button to start.</span>
-      <img
+      
+
+      <button id="startBtn" ><img
         src="./assets/red-button-edit.png"
         alt="red-button"
-        id="red-button"
-      />
+        id="startBtn"
+      /></button>
       <button id="music-player">Music</button>
 
       <audio id="whoosh">
