wired up the module for test.js

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <body>
     <div id="page-container">
       <h1 id="title">
-        Reaction Tester <!-- <span class="material-symbols-outlined"> Timer </span> -->
+        Reaction Tester <span class="material-symbols-outlined"> Timer </span> 
       </h1>
 
-      <h2>Click on the boxes and circles as quickly as possible.</h2>
+    <button id="goToGame">Click to Start</button>
+     <h2>Click on the boxes and circles as quickly as possible.</h2>
       <p>
         <strong id="average-tag">Average:</strong
         ><span id="avg-secs">0.00s</span>
@@ -42,7 +43,7 @@
         src="./assets/red-button-edit.png"
         alt="red-button"
         id="startBtn"
-      /></button>
+      /></button> 
       <button id="music-player">Music</button>
 
       <audio id="whoosh">
@@ -65,9 +66,9 @@
           src="/assets/Jeremy_Blake_-_Powerup_NO_COPYRIGHT_8-bit_Music.mp3"
           type="audio/mpeg"
         />
-      </audio>
-      <script type="text/javascript" src="index.js"></script>
-      <script type="module" src="./modules/test.js"></script>
+      </audio> 
+       <script type="text/javascript" src="index.js"></script>
+      
     </div>
   </body>
 </html>
